force-app/main/default/objects/ucinn_ascendv2__Phone__c/ucinn_ascendv2__Phone__c.object-meta.xml
<CustomObject>
    <description>The phone numbers of the constituent or organization.</description>
    <label>Phone</label>
    <nameField>
        <label>Phone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>