force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <description>For ISUF use</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternate Address</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Endowment Reporting</fullName>
            </value>
            <value>
                <fullName>Pledge Reminder</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Second Business</fullName>
            </value>
            <value>
                <fullName>Alumni Association Membership</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Professional Advisor</fullName>
            </value>
            <value>
                <fullName>Third Home</fullName>
            </value>
            <value>
                <fullName>Second Home</fullName>
            </value>
            <value>
                <fullName>Home Telephone History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>