force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/Phone_Type_Verified__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phone Type Verified</description>
    <inlineHelpText>This phone type has been verified</inlineHelpText>
    <label>Phone Type Verified</label>
    <type>Checkbox</type>
</CustomField>