force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/Phone_Verified_by_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verified_by_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Verified by Vendor</label>
    <type>Checkbox</type>
</CustomField>