force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/Preferred_Phone_Type_Priority__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Type_Priority__c</fullName>
    <description>Sets a sorting priority for phones to order the most likely to be preferred at the top</description>
    <formula>IF(  ISPICKVAL(ucinn_ascendv2__Status__c, &apos;Current&apos;),        
CASE( TEXT( ucinn_ascendv2__Type__c ), &apos;Home - Cell&apos;, 1, 
                                       &apos;Home - Phone&apos;, 2,
                                       &apos;Home - Landline&apos;,3,
                                       &apos;Business - Cell&apos;,4,
                                       &apos;Business - Phone&apos;,5,
                                       &apos;Business - Landline&apos;,6,
                                        NULL)
, NULL)</formula>
    <label>Preferred Phone Type Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>