force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization / Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>Phones_Account</relationshipName>
    <type>Lookup</type>
</CustomField>