force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/ucinn_ascendv2__Extension__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Extension__c</fullName>
    <label>Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>