force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/ucinn_ascendv2__Phone_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Phone_Name_Auto_Number__c</fullName>
    <displayFormat>P-{0000000}</displayFormat>
    <label>Phone Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>