force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/ucinn_ascendv2__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>