force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/ucinn_portal_Interim__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>ucinn_portal_Interim_Phones</relationshipName>
    <type>Lookup</type>
</CustomField>