force-app/main/default/objects/ucinn_ascendv2__Phone__c/fields/ucinn_portal_Original_Record__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Original_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Record</label>
    <referenceTo>ucinn_ascendv2__Phone__c</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>ucinn_portal_Phones</relationshipName>
    <type>Lookup</type>
</CustomField>