force-app/main/default/objects/ucinn_ascendv2__Phone__c/recordTypes/ucinn_ascendv2__Contact_Phone.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Contact_Phone</fullName>
    <active>true</active>
    <description>A constituent&apos;s phone number.</description>
    <label>Contact Phone</label>
</RecordType>