force-app/main/default/objects/ucinn_ascendv2__Phone__c/recordTypes/ucinn_ascendv2__Organization_Phone.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Organization_Phone</fullName>
    <active>true</active>
    <description>A Corporation/organization&apos;s phone number.</description>
    <label>Organization Phone</label>
</RecordType>