force-app/main/default/objects/ucinn_ascendv2__Phone__c/validationRules/ucinn_ascendv2__Only_Contact_OR_Org_Can_Have_a_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Only_Contact_OR_Org_Can_Have_a_Value</fullName>
    <active>false</active>
    <description>Make sure that a phone looks to a contact OR an organization, but not both.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
!ISBLANK(ucinn_ascendv2__Account__c) &amp;&amp; !ISBLANK(ucinn_ascendv2__Contact__c) &amp;&amp;
OR (
RecordType.DeveloperName = &quot;Contact_Phone&quot;,
RecordType.DeveloperName = &quot;Organization_Phone&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorMessage>A phone can be associated to either a constituent or an organization, but not both.</errorMessage>
</ValidationRule>